--- a/nextcloud/.env.sample
+++ b/nextcloud/.env.sample
@@ -3,10 +3,10 @@
 ####################
 
 # Directoy on the host where all the data will be stored. It will be automatically created if it doesn't exist.
-DATA_DIR=/nextcloud
+DATA_DIR=/opt/cloud
 
 # Hostname at which the Nextcloud instance will be accessible.
-HOST=cloud.chenchik.me
+HOST=
 
 # Version of MySQL and Nextcloud to use
 MYSQL_VERSION=5.5
@@ -18,19 +18,19 @@ NEXTCLOUD_VERSION=13.0.1
 #############################################################################
 
 # Backblaze B2 bucket to which the data will be backed up. You need to create it yourself.
-B2_BUCKET=nextcloud-chenchik-me-backups
+B2_BUCKET=nextcloud-backups
 
 # Backblaze B2 credentials
 # Should be set localy
-#B2_ID=
-#B2_KEY=
+B2_ID=
+B2_KEY=
 
 # Backup schedule (UTC timezone)
 BACKUP_SCHEDULE=0 2 * * *
 
 # Encryption key to use before backing up the data. Must be at least 8 characters.
 # Should be set localy
-#BACKUP_ENCRYPTION_KEY=
+BACKUP_ENCRYPTION_KEY=
 
 # Name of the backup
 BACKUP_NAME=nextcloud-backups
