--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,10 +1,10 @@
 FROM continuumio/anaconda3
 
-CMD conda install -c conda-forge jupyterhub
-CMD conda install jupyterlab
+RUN conda install -c conda-forge jupyterhub
+RUN conda install jupyterlab
 
-CMD conda install nodejs
-CMD jupyter labextension install @jupyterlab/hub-extension
+RUN conda install nodejs
+RUN jupyter labextension install @jupyterlab/hub-extension
 
 EXPOSE 80
 CMD jupyterhub --port 80 --Spawner.cmd="jupyter-labhub"
