--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -3,6 +3,7 @@ FROM continuumio/anaconda3
 RUN conda install -c conda-forge jupyterhub
 RUN conda install jupyterlab
 
+RUN conda install nb_conda_kernels
 RUN jupyter labextension install @jupyterlab/hub-extension
 
 RUN useradd -m jupyter
