--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -11,6 +11,7 @@ RUN useradd -m jupyter
 USER jupyter
 RUN conda create -n jupyter_user_env
 RUN conda install -n jupyter_user_env ipykernel
+USER root
 
 EXPOSE 80
 CMD jupyterhub --port 80 --Spawner.cmd="jupyter-labhub"
