--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -11,6 +11,9 @@ RUN useradd -m jupyter
 USER jupyter
 RUN conda create -n jupyter_user_env
 RUN conda install -n jupyter_user_env ipykernel
+RUN source activate jupyter_user_env
+RUN ipython kernel install --user --name jupyter_user_env
+
 USER root
 
 EXPOSE 80
