jupyter dockerfile: change executable to bash

--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -11,8 +11,7 @@ RUN useradd -m jupyter
 USER jupyter
 RUN conda create -n jupyter_user_env
 RUN conda install -n jupyter_user_env ipykernel
-RUN source activate jupyter_user_env
-RUN ipython kernel install --user --name jupyter_user_env
+RUN /bin/bash -c "source activate jupyter_user_env; ipython kernel install --user --name jupyter_user_env"
 
 USER root
 
