change dir for notebooks

--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -6,6 +6,8 @@ RUN conda install jupyterlab
 RUN conda install nb_conda_kernels
 RUN jupyter labextension install @jupyterlab/hub-extension
 
+RUN mkdir -p -m 777 /opt/jupyter
+
 RUN useradd -m jupyter
 
 USER jupyter
@@ -16,4 +18,4 @@ RUN /bin/bash -c "source activate jupyter_user_env; ipython kernel install --use
 USER root
 
 EXPOSE 80
-CMD jupyterhub --port 80 --Spawner.cmd="jupyter-labhub"
+CMD jupyterhub --port 80 --Spawner.cmd="jupyter-labhub" --Spawner.notebook-dir=/opt/jupyter
